test/should_pass/ret_002.grg
actions ret_002 using basic_model_002;

rule r : (A, AB, B, N) {
	pattern {
		x : A;
		y : B;
		z : C;
		n : N;
	}
	replace {
		x; y; n; z;
		return (x, y, y, n);
	}
}

